- Add new port: math/R-cran-profileModel
  profileModel provides tools that can be used to calculate, evaluate,
  plot and use for inference the profiles of arbitrary inference
  functions for arbitrary 'glm'-like fitted models with linear
  predictors. In addition, it allows the developers of fitting
  procedures to use these capabilities by simply writing a function
  for the appropriate objective to be profiled.

  WWW: http://cran.r-project.org/web/packages/profileModel/

--- a/math/Makefile
+++ b/math/Makefile
@@ -36,6 +36,7 @@
     SUBDIR += R-cran-mvtnorm
     SUBDIR += R-cran-nnls
     SUBDIR += R-cran-outliers
+    SUBDIR += R-cran-profileModel
     SUBDIR += R-cran-psych
     SUBDIR += R-cran-quadprog
     SUBDIR += R-cran-sandwich
