- Add new port: math/R-cran-rngtools
  This package contains a set of functions for working with Random
  Number Generators (RNGs). In particular, it defines a generic S4
  framework for getting/setting the current RNG, or RNG data that are
  embedded into objects for reproducibility. Notably, convenient
  default methods greatly facilitate the way current RNG settings can
  be changed.

  WWW: https://cran.r-project.org/web/packages/rngtools/

--- a/math/Makefile
+++ b/math/Makefile
@@ -38,6 +38,7 @@
     SUBDIR += R-cran-outliers
     SUBDIR += R-cran-psych
     SUBDIR += R-cran-quadprog
+    SUBDIR += R-cran-rngtools
     SUBDIR += R-cran-sandwich
     SUBDIR += R-cran-sm
     SUBDIR += R-cran-sp
