- Add LICENSE_FILE
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400779 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/rubygem-bson/Makefile
+++ b/devel/rubygem-bson/Makefile
@@ -10,7 +10,9 @@ MAINTAINER=	ruby@FreeBSD.org
 COMMENT=	Full featured BSON specification implementation in Ruby
 
 LICENSE=	APACHE20
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
+#NO_ARCH=	yes
 USE_RUBY=	yes
 USE_RUBYGEMS=	yes
 RUBYGEM_AUTOPLIST=	yes
