- Mark MAKE_JOBS_UNSAFE, fails in parallel build:
mkdir: objects: No such file or directory

- Use options helpers

Approved by:	portmgr blanket


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400838 35697150-7ecd-e111-bb59-0022644237b5

--- a/science/medit/Makefile
+++ b/science/medit/Makefile
@@ -26,6 +26,7 @@ MAKEFILE=	makefile
 ALL_TARGET=	${OPSYS}
 MAKE_ENV=	WRKSRC="${WRKSRC}" ARCHI=${OPSYS} ARCH=${ARCH} OSREL=${OSREL}
 NO_WRKSUBDIR=	yes
+MAKE_JOBS_UNSAFE=	yes
 
 LIBVERSION=	${PORTVERSION}
 SOURCETARB=	${PORTNAME}.${PORTVERSION}${EXTRACT_SUFX}
@@ -57,9 +58,9 @@ pre-build:
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/bin/${PORTNAME} ${STAGEDIR}${PREFIX}/bin
-.if ${PORT_OPTIONS:MEXAMPLES}
+
+do-install-EXAMPLES-on:
 	${MKDIR} ${STAGEDIR}${EXAMPLESDIR}
 	${INSTALL_DATA} ${MESHES:S|^|${WRKSRC}/INRIA.dir/|} ${STAGEDIR}${EXAMPLESDIR}
-.endif
 
 .include <bsd.port.mk>
