oursql is a set of MySQL bindings for python 2.4+ with a focus on wrapping the MYSQL_STMT API to provide real parameterization and real server-side cursors. MySQL 4.1.2 or better is required.
WWW: https://launchpad.net/oursql

PR:		202915
Submitted by:	Yuri Victorovich <yuri@rawbw.com>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400870 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -745,6 +745,7 @@
     SUBDIR += py-mysql2pgsql
     SUBDIR += py-odbc
     SUBDIR += py-oops
+    SUBDIR += py-oursql
     SUBDIR += py-peewee
     SUBDIR += py-pg8000
     SUBDIR += py-pg_pqueue
