The Pywikibot framework is a Python library that interfaces with the MediaWiki API version 1.14 or higher.
WWW: https://www.mediawiki.org/wiki/Pywikibot

PR:		202900
Submitted by:	Yuri Victorovich <yuri@rawbw.com>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400875 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/Makefile
+++ b/www/Makefile
@@ -1713,6 +1713,7 @@
     SUBDIR += py-pysearch
     SUBDIR += py-python-digitalocean
     SUBDIR += py-pywebdav
+    SUBDIR += py-pywikibot
     SUBDIR += py-qp
     SUBDIR += py-qpy
     SUBDIR += py-qt4-webkit
