- Fix plist when the default compiler is gcc5
Spotted by:	sunpoet
Obtained from:	DPorts (marino)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400879 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/openmpi/Makefile
+++ b/net/openmpi/Makefile
@@ -31,7 +31,10 @@ CONFIGURE_ARGS+=	--prefix=${PREFIX}/${MPIDIR} \
 			--mandir=${PREFIX}/${MPIDIR}/man \
 			--program-prefix= \
 			--with-hwloc=${LOCALBASE} \
-			--with-libltdl=${LOCALBASE}
+			--with-libltdl=${LOCALBASE} \
+			--enable-mpi-fortran=usempi \
+			ompi_cv_fortran_ignore_tkr_data=0
+
 LDFLAGS+=	-L${LOCALBASE}/lib
 USE_LDCONFIG=	${PREFIX}/${MPIDIR}/lib \
 		${PREFIX}/${MPIDIR}/lib/openmpi
