Add a port of Alembic, an open framework for storing and sharing graphic scene data.
WWW: http://alembic.io/


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400883 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -39,6 +39,7 @@
     SUBDIR += aeskulap
     SUBDIR += agave
     SUBDIR += agg
+    SUBDIR += alembic
     SUBDIR += alpng
     SUBDIR += amide
     SUBDIR += ampasACES-container
