Add slave port for djview4 with QT4 interface
PR:		198088
Submitted by:	lightside <lightside@gmx.com>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400948 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -133,6 +133,7 @@
     SUBDIR += digikam-kde4-l10n
     SUBDIR += ditaa
     SUBDIR += djview4
+    SUBDIR += djview4-qt4
     SUBDIR += djvulibre
     SUBDIR += dmtx-utils
     SUBDIR += dri
