Linuxdoc-Tools is a fork of SGML-Tools 1.0.9, capable of processing LinuxDoc DTD SGML files. Such files are sometimes used as an input format for generated documentation.
WWW: https://tracker.debian.org/pkg/linuxdoc-tools

PR:		195478
Submitted by:	Felix Palmen <felix@palmen-it.de>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400951 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -438,6 +438,7 @@
     SUBDIR += linux-f10-scim-gtk
     SUBDIR += linux-f10-scim-libs
     SUBDIR += linuxdoc
+    SUBDIR += linuxdoc-tools
     SUBDIR += localize
     SUBDIR += loook
     SUBDIR += lt-aspell
