Add a new port of tools designed to work with the LEDs on ARM boards. It initially supports the BeagleBone Black, but others will follow.
Approved by:	bdrewery (mentor)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400969 35697150-7ecd-e111-bb59-0022644237b5

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -392,6 +392,7 @@
     SUBDIR += qt5ct
     SUBDIR += quotes
     SUBDIR += raspberrypi-userland
+    SUBDIR += raspbsd-led
     SUBDIR += ree
     SUBDIR += rfc
     SUBDIR += ringtonetools
