--- a/misc/raspbsd-led/Makefile
+++ b/misc/raspbsd-led/Makefile
@@ -2,14 +2,15 @@
 
 PORTNAME=	raspbsd-led
 PORTVERSION=	0.1
-CATEGORIES=	misc
 DISTVERSIONPREFIX=	v
+CATEGORIES=	misc
 
 MAINTAINER=	brd@FreeBSD.org
 COMMENT=	Misc LED programs for ARM boards
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	raspbsd
+ONLY_FOR_ARCHS=	armv6
 PLIST_FILES=	sbin/flash-heartbeat-led
 
 .include <bsd.port.mk>
