New Port: devel/antlr4
ANTLR, ANother Tool for Language Recognition, (formerly PCCTS) is a
language tool that provides a framework for constructing recognizers,
compilers, and translators from grammatical descriptions containing
C++ or Java actions.

WWW: http://www.antlr.org


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@400994 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -74,6 +74,7 @@
     SUBDIR += anjuta-extras
     SUBDIR += antlr
     SUBDIR += antlr3
+    SUBDIR += antlr4
     SUBDIR += antlrworks
     SUBDIR += apache-ant
     SUBDIR += api-sanity-autotest
