daemonize is a command-line utility that runs a command as a Unix daemon. See the accompanying man page for full details.
WWW: https://github.com/bmc/daemonize

PR:		203063
Submitted by:	Neel Chauhan <neel@neelc.org>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@401010 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -178,6 +178,7 @@
     SUBDIR += daa2iso
     SUBDIR += dae
     SUBDIR += daedalus
+    SUBDIR += daemonize
     SUBDIR += daemontools
     SUBDIR += daemontools-encore
     SUBDIR += dar
