new port: textproc/rubygem-jekyll-feed
A Jekyll plugin to generate an Atom (RSS-like) feed of Jekyll posts.

WWW: https://github.com/jekyll/jekyll-feed


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@401021 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1399,6 +1399,7 @@
     SUBDIR += rubygem-ini
     SUBDIR += rubygem-itextomml
     SUBDIR += rubygem-jekyll-assets
+    SUBDIR += rubygem-jekyll-feed
     SUBDIR += rubygem-jekyll-gist
     SUBDIR += rubygem-jekyll-mentions
     SUBDIR += rubygem-jekyll-paginate
