new port: textproc/rubygem-jekyll-sitemap
A Jekyll plugin generating sitemaps.org compliant sitemaps for Jekyll sites.

WWW: https://github.com/jekyll/jekyll-sitemap


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@401022 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1405,6 +1405,7 @@
     SUBDIR += rubygem-jekyll-paginate
     SUBDIR += rubygem-jekyll-redirect-from
     SUBDIR += rubygem-jekyll-sass-converter
+    SUBDIR += rubygem-jekyll-sitemap
     SUBDIR += rubygem-jemoji
     SUBDIR += rubygem-jsmin
     SUBDIR += rubygem-kramdown
