new port: devel/rubygem-slop3
PR:		204338
Submitted by:	Nick Hilliard <nick@foobar.org>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@401028 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4973,6 +4973,7 @@
     SUBDIR += rubygem-slack-notifier
     SUBDIR += rubygem-slim
     SUBDIR += rubygem-slop
+    SUBDIR += rubygem-slop3
     SUBDIR += rubygem-soap4r
     SUBDIR += rubygem-spring
     SUBDIR += rubygem-sprockets
